Add sort, genres, find, movie details

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-
+<app-find-movie *ngIf="condition"></app-find-movie>
+<app-movie-details *ngIf="!condition"></app-movie-details>
 <app-main></app-main>
