--- a/src/app/components/film-card/film-card.component.html
+++ b/src/app/components/film-card/film-card.component.html
@@ -1,10 +1,10 @@
-<div class="film-card">
-  <div class="poster" [style.background-image]="'url(' + movie.poster_path + ')'"></div>
-  <div class="movie-details">
-    <div class="title-year">
-      <div>{{movie.title}}</div>
-      <div>{{movie.release_date | date:'YYYY'}}</div>
-    </div>
-    <p>{{movie.genres}}</p>
+ <div class="film-card" (click)="sendMovieDetails()">
+     <div class="poster" [style.background-image]="'url(' + movie.poster_path + ')'"></div>
+     <div class="movie-details">
+       <div class="title-year">
+         <div>{{movie.title}}</div>
+         <div class="year">{{movie.release_date | date:'YYYY'}}</div>
+       </div>
+       <p>{{movie.genres}}</p>
+     </div>
   </div>
-</div>
