--- a/src/app/components/film-card/film-card.component.scss
+++ b/src/app/components/film-card/film-card.component.scss
@@ -7,8 +7,13 @@
 .title-year {
   display: flex;
   justify-content: space-between;
+  margin-top: 20px;
+
 }
 
 .film-card{
   margin: 70px;
+}
+.year{
+  border: 1px solid white;
 }
