--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
+*{
+  font-family: 'Roboto', sans-serif;
+  color: white;
+}
+body{
+  background-color: rgb(23,23,23)
+}
