--- a/src/app/components/header/find-movie.component.html
+++ b/src/app/components/header/find-movie.component.html
@@ -1,4 +1,15 @@
-<p>Find your movie</p>
-<input type="text" [(ngModel)]="movieTitle">
-<button (click)="sendMovieTitle()">search</button>
-
+<div class="wrapper">
+  <div class="line first">
+    <div class="netflix-title">
+      <span class="netflix">netflix</span>roulette
+    </div>
+    <div>
+      <button><span>+ ADD MOVIE</span></button>
+    </div>
+  </div>
+  <div class="find-text">FIND YOUR MOVIE</div>
+  <div class="line third">
+    <input type="text" [(ngModel)]="movieTitle" placeholder="What do you want to watch?">
+    <button (click)="sendMovieTitle()">SEARCH</button>
+  </div>
+</div>
