--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,5 +1,5 @@
 <app-menu (filterEmitter)="filterMovies($event)" (sortFieldEmitter)="sortMovies($event)"></app-menu>
-<p>{{moviesToShow.length}} movies found</p>
+<p>{{moviesToShow.length}} <span class="after-count-text">movies found</span></p>
 
 <div class="film-cards">
   <app-film-card *ngFor="let movie of moviesToShow" [movie]="movie"></app-film-card>
