--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -1,17 +1,25 @@
-<div class="details-wrapper">
-  <img src="{{movie.poster_path}}" alt="">
-  <div class="rows">
-    <div class="line-1">
-      <h1>{{movie.title}}</h1>
-      <div class="vote">{{movie.vote_average}}</div>
+<div class="details-wrapper1">
+  <div class="header">
+    <div class="netflix-title">
+      <span class="netflix">netflix</span>roulette
     </div>
-    <div>{{movie.tagline}}</div>
-    <div class="line-4">
-      <span>{{movie.release_date | date : "YYYY"}}</span>
-      <span class="runtime">{{movie.runtime}} min</span>
-    </div>
-    <div>
-      <p>{{movie.overview}}</p>
+    <button class="back-button" (click)="changeCondition()">Back</button>
+  </div>
+  <div class="details-wrapper">
+    <img src="{{movie.poster_path}}" alt="">
+    <div class="rows">
+      <div class="line-1">
+        <div class="title">{{movie.title}}</div>
+        <div class="vote">{{movie.vote_average}}</div>
+      </div>
+      <div class="tagline">{{movie.tagline}}</div>
+      <div class="line-4">
+        <span>{{movie.release_date | date : "YYYY"}}</span>
+        <span class="runtime">{{movie.runtime}} min</span>
+      </div>
+      <div class="overview">
+        {{movie.overview}}
+      </div>
     </div>
   </div>
 </div>
