--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -3,7 +3,8 @@
     <div class="netflix-title">
       <span class="netflix">netflix</span>roulette
     </div>
-    <button class="back-button" (click)="changeCondition()">Back</button>
+  <div class="back-icon" (click)="changeCondition()"></div>
+<!--    <i class="fas fa-search" (click)="changeCondition()">&#f002</i>-->
   </div>
   <div class="details-wrapper">
     <img src="{{movie.poster_path}}" alt="">
