Impl add movie func

--- a/src/app/components/header/find-movie.component.html
+++ b/src/app/components/header/find-movie.component.html
@@ -4,7 +4,7 @@
       <span class="netflix">netflix</span>roulette
     </div>
     <div>
-      <button><span>+ ADD MOVIE</span></button>
+      <button><span><a routerLink="/add" (click)="test()">+ ADD MOVIE</a></span></button>
     </div>
   </div>
   <div class="find-text">FIND YOUR MOVIE</div>
