--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div class="wrapper">
-  <div class="blur">
-    <app-find-movie *ngIf="condition"></app-find-movie>
-    <app-movie-details *ngIf="!condition"></app-movie-details>
-  </div>
-</div>
-<app-main></app-main>
+<router-outlet></router-outlet>
