--- a/src/app/components/main/movie-cards.component.html
+++ b/src/app/components/main/movie-cards.component.html
@@ -2,5 +2,5 @@
 <p>{{moviesToShow.length}} <span class="after-count-text">movies found</span></p>
 
 <div class="film-cards">
-  <app-film-card *ngFor="let movie of moviesToShow" [movie]="movie"></app-film-card>
+  <app-movie-card *ngFor="let movie of moviesToShow" [movie]="movie"></app-movie-card>
 </div>
