--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="blur">
-    <app-find-movie *ngIf="condition"></app-find-movie>
-    <app-movie-details *ngIf="!condition"></app-movie-details>
+    <app-find-movie *ngIf="condService.swapCondition$ | async"></app-find-movie>
+    <app-movie-details *ngIf="!(condService.swapCondition$ | async)"></app-movie-details>
   </div>
 </div>
-<app-main></app-main>
+<app-movie-cards></app-movie-cards>
