--- a/src/app/components/film-card/movie-card.component.scss
+++ b/src/app/components/film-card/movie-card.component.scss
@@ -27,20 +27,22 @@
   font-weight: 100;
   font-size: 10pt;
 }
-.movie-title{
+.movie-title {
   font-weight: 300;
 }
-app-dotted-menu{
+
+app-movie-card-menu {
   visibility: hidden;
   position: absolute;
-  background-color: rgb(23,23,32);
+  background-color: rgb(23, 23, 32);
   margin-left: 330px;
   margin-top: 20px;
   border-radius: 15px;
 
 }
-*:hover{
-  app-dotted-menu{
+
+*:hover {
+  app-movie-card-menu {
     visibility: visible;
   }
 
