--- a/src/app/components/dotted-menu/movie-card-menu.component.html
+++ b/src/app/components/dotted-menu/movie-card-menu.component.html
@@ -1,11 +1,9 @@
-<div class="wrapper" (mouseleave)="mouseOut()" #wrapper>
+<div (mouseleave)="mouseOut()" #wrapper>
   <div class="header" #header>
     <div class="header-burger" (click)="change()" #header_burger>
       <span></span>
     </div>
   </div>
-
-
   <nav class="header-menu" #header_menu>
     <ul class="header-list">
       <li>
