--- a/src/app/components/header/find-movie.component.html
+++ b/src/app/components/header/find-movie.component.html
@@ -7,7 +7,7 @@
       <button><span>+ ADD MOVIE</span></button>
     </div>
   </div>
-  <div class="find-text">FIND YOUR MOVIE</div>
+  <h1 class="find-text">FIND YOUR MOVIE</h1>
   <div class="line third">
     <input type="text" [(ngModel)]="movieTitle" placeholder="What do you want to watch?">
     <button (click)="sendMovieTitle()">SEARCH</button>
