--- a/src/app/components/film-card/movie-card.component.html
+++ b/src/app/components/film-card/movie-card.component.html
@@ -1,5 +1,4 @@
-
-<div class="film-card" (click)="sendMovieDetailsForHeader()">
+<div (click)="sendMovieDetailsForHeader()">
   <app-movie-card-menu></app-movie-card-menu>
   <div class="poster" [style.background-image]="'url(' + movie.poster_path + ')'"></div>
   <div class="movie-details">
