--- a/src/app/components/dotted-menu/movie-card-menu.component.html
+++ b/src/app/components/dotted-menu/movie-card-menu.component.html
@@ -1,10 +1,10 @@
 <div (mouseleave)="mouseOut()" #wrapper>
   <div class="header" #header>
-    <div class="header-burger" (click)="change()" #header_burger>
+    <div class="header-burger" (click)="change()" #headerBurger>
       <span></span>
     </div>
   </div>
-  <nav class="header-menu" #header_menu>
+  <nav class="header-menu" #headerMenu>
     <ul class="header-list">
       <li>
         <span class="header-elem">Edit</span>
