--- a/src/app/components/film-card/movie-card.component.html
+++ b/src/app/components/film-card/movie-card.component.html
@@ -1,9 +1,9 @@
 <div (click)="sendMovieDetailsForHeader()">
   <app-movie-card-menu></app-movie-card-menu>
-  <div class="poster" [style.background-image]="'url(' + movie.poster_path + ')'"></div>
+  <img src="{{movie.poster_path}}" class="poster">
   <div class="movie-details">
     <div class="title-year">
-      <div class="movie-title">{{movie.title}}</div>
+      <h3 class="movie-title">{{movie.title}}</h3>
       <div class="year">{{movie.release_date | date:'YYYY'}}</div>
     </div>
     <p>{{movie.genres}}</p>
