movie card refactor

--- a/src/app/components/main/movie-cards.component.html
+++ b/src/app/components/main/movie-cards.component.html
@@ -4,5 +4,6 @@
 <p>{{moviesToShow.length}} <span class="after-count-text">movies found</span></p>
 
 <div class="film-cards">
-  <app-movie-card *ngFor="let movie of moviesToShow" [movie]="movie"></app-movie-card>
+  <app-movie-card *ngFor="let movie of moviesToShow" [movie]="movie" (movieEmitter)="sendMovieDetailsToHeader($event)"
+                  (click)="swapHeader()"></app-movie-card>
 </div>
