--- a/src/app/components/film-card/movie-card.component.html
+++ b/src/app/components/film-card/movie-card.component.html
@@ -1,4 +1,4 @@
-<div (click)="sendMovieDetailsForHeader()">
+<div (click)="sendMovie()">
   <app-movie-card-menu></app-movie-card-menu>
   <img src="{{movie.poster_path}}" class="poster">
   <div class="movie-details">
