--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div class="wrapper">
-  <div class="blur">
-    <app-find-movie *ngIf="condService.swapHeaderCondition$ | async"></app-find-movie>
-    <app-movie-details *ngIf="(condService.swapHeaderCondition$ | async) === false"></app-movie-details>
-  </div>
-</div>
-<app-movie-cards></app-movie-cards>
+<router-outlet></router-outlet>
