--- a/src/app/components/main/movie-handler.component.html
+++ b/src/app/components/main/movie-handler.component.html
@@ -8,3 +8,5 @@
                   (movieEmitter)="sendMovieDetailsToHeader($event)"
                   (click)="swapHeader()"></app-movie-card>
 </div>
+<app-modal-dialog *ngIf="isVisible" (decisionEmitter)="handleConfirm($event)" title="DELETE MOVIE"
+                  message="Are you sure you want to delete this movie?"></app-modal-dialog>
