--- a/src/app/components/film-card/movie-card.component.html
+++ b/src/app/components/film-card/movie-card.component.html
@@ -6,6 +6,6 @@
       <h3 class="movie-title">{{movie.title}}</h3>
       <div class="year">{{movie.release_date | date:'YYYY'}}</div>
     </div>
-    <p>{{movie.genres}}</p>
+    <p id="genres">{{movie.genres}}</p>
   </div>
 </div>
