--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -14,12 +14,10 @@
       </div>
       <div class="tagline">{{(movieDetService.movieDetailsSubject$ | async)?.tagline}}</div>
       <div class="line-4">
-        <span>{{(movieDetService.movieDetailsSubject$ | async)?.release_date | date : "YYYY"}}</span>
+        <span class="relDate">{{(movieDetService.movieDetailsSubject$ | async)?.release_date | date : "YYYY"}}</span>
         <span class="runtime">{{(movieDetService.movieDetailsSubject$ | async)?.runtime}} min</span>
       </div>
-      <div class="overview">
-        {{(movieDetService.movieDetailsSubject$ | async)?.overview}}
-      </div>
+      <div class="overview">{{(movieDetService.movieDetailsSubject$ | async)?.overview}}</div>
     </div>
   </div>
 </div>
