--- a/src/app/components/dotted-menu/movie-card-menu.component.html
+++ b/src/app/components/dotted-menu/movie-card-menu.component.html
@@ -10,7 +10,7 @@
         <span class="header-elem">Edit</span>
       </li>
       <li>
-        <span class="header-elem" (click)="sendDeleteClick()">Delete</span>
+        <span class="header-elemD" (click)="sendDeleteClick()">Delete</span>
       </li>
     </ul>
   </nav>
