--- a/src/app/components/film-card/movie-card.component.html
+++ b/src/app/components/film-card/movie-card.component.html
@@ -1,5 +1,6 @@
-<div (click)="sendMovie()">
-  <app-movie-card-menu (deleteClickEmitter)="sendSignToShowDialog($event)" [movie]="movie"></app-movie-card-menu>
+<div class="outer" (click)="sendMovie()">
+  <app-movie-card-menu (deleteClickEmitter)="sendSignToShowDialog($event)" [movie]="movie"
+                       class="testS"></app-movie-card-menu>
   <img src="{{movie.poster_path}}" class="poster">
   <div class="movie-details">
     <div class="title-year">
