--- a/src/app/components/edit/edit.component.html
+++ b/src/app/components/edit/edit.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="title-form">ADD MOVIE</div>
+  <div class="title-form">EDIT MOVIE</div>
   <form method="post" #editForm>
     <div>
       <label>TITLE</label>
