--- a/src/app/components/menu/filter-sort-menu.component.scss
+++ b/src/app/components/menu/filter-sort-menu.component.scss
@@ -1,4 +1,5 @@
 @import "src/app/variables";
+
 :host {
   display: flex;
   justify-content: space-between;
@@ -10,12 +11,13 @@ select {
   background-color: rgb(23, 23, 23);
   border: none;
   outline: none;
-
+  font-size: 10pt;
 }
 
 option {
   border: none;
   outline: none;
+  font-size: 10pt;
 }
 
 .genres div, .select-sort {
@@ -27,6 +29,10 @@ option {
   display: flex;
 }
 
+.genres div {
+  font-size: 10pt;
+}
+
 .genres div:hover {
   border-bottom: 3px solid red;
   cursor: pointer
@@ -35,4 +41,5 @@ option {
 .sort-text {
   font-weight: 100;
   margin-right: 10px;
+  font-size: 10pt;
 }
