--- a/src/app/components/film-card/movie-card.component.html
+++ b/src/app/components/film-card/movie-card.component.html
@@ -1,7 +1,7 @@
 <div class="outer" (click)="sendMovie()">
   <app-movie-card-menu (deleteClickEmitter)="sendSignToShowDialog($event)" [movie]="movie"
                        class="testS"></app-movie-card-menu>
-  <img src="{{movie.poster_path}}" class="poster">
+  <img src="{{movie.poster_path}}" class="poster" (click)="swapHeader()">
   <div class="movie-details">
     <div class="title-year">
       <h3 class="movie-title">{{movie.title}}</h3>
